<resources>
    <string name="app_name">Carto Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_floor">FloorActivity</string>
    <string name="turn_left">Left</string>
    <string name="take_step">Step</string>
    <string name="turn_right">Right</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="ok_to_walk">OK TO WALK</string>
    <string name="ok_to_turn">POSITON IS UP TO DATE</string>
    <string name="stop_to_turn">POSITION NOT UP TO DATE</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_location_list">LocationListActivity</string>
    <string name="n_photos">photos</string>
    <string name="no_photos">No photos yet</string>
    <string name="title_activity_location">Add Location</string>
    <string name="title_activity_data_set">Create New Dataset</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="error_name">Name required</string>
    <string name="error_description">Description required</string>
    <string name="error_connection">Network connection failed</string>
    <string name="title_activity_photo_list">Photos</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_edit_building">EditBuildingActivity</string>
    <string name="title_activity_sensors_test">SensorsTestActivity</string>
    <string name="action_tests">Tests</string>
    <string name="action_map">Map</string>
    <string name="action_pin_to_map">Pin to map</string>
    <string name="place_under_cursor">Place under cursor</string>
    <string name="loading">Loading</string>
    <string name="edit_location">Edit location under cursor</string>
    <string name="show">Show</string>
    <string name="network_error">Network error</string>
    <string name="sending">Sending</string>
    <string name="select_map_photo">Take a floor plan photo</string>
    <string name="start_record">Start path</string>
    <string name="end_record">End path</string>
    <string name="record_ended">Path recording ended</string>
    <string name="start_walking">Path record started. Walk to destination.</string>
    <string name="title_activity_photo_edit">Edit photo</string>
</resources>
